<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/addAutoReply"
        android:textAppearance="?textAppearanceHeadline5"
        android:textColor="?colorOnBackground"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageEtLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:clipToPadding="false"
        android:hint="@string/message"
        android:textColorHint="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/titleTv">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:minHeight="56dp"
            android:textAppearance="?textAppearanceBody1" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/simCardBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@color/blue"
        android:text="@string/simCard"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageEtLyt" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cancel"
        android:textColor="@color/white"
        app:backgroundTint="@color/red"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/submitBtn"
        app:layout_constraintTop_toBottomOf="@+id/simCardBtn" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="6dp"
        android:layout_marginBottom="8dp"
        android:text="@string/submit"
        android:textColor="@color/white"
        app:backgroundTint="@color/primary"
        app:cornerRadius="@dimen/cornerRadius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancelBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simCardBtn" />


</androidx.constraintlayout.widget.ConstraintLayout>