<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.aboutMe.AboutMeActivity">

        <com.rymo.felfel.view.BaseToolbar
            android:id="@+id/toolbarView"
            android:layout_width="0dp"
            android:layout_height="56dp"
            app:bt_background="?colorPrimary"
            app:bt_showBack="true"
            app:bt_tint="?colorOnPrimary"
            app:bt_title="@string/aboutMe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/titleTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/connectWithMeClick"
                android:textAppearance="?textAppearanceHeadline4" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/gmailBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/myGmail"
                android:textAllCaps="false"
                android:textAppearance="?textAppearanceHeadline5"
                android:textColor="@color/blue" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/websiteBtn"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/myWebsite"
                android:textAllCaps="false"
                android:textAppearance="?textAppearanceHeadline5"
                android:textColor="@color/blue" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>